# Computing-OpenCL

./: CMakeLists.txt  Program  README.md  a.out  copyimage.cl  imageCopyFilter.cpp  utils.cpp  utils.hpp
